# FFmpegRelated

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/ffmpegrelated/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: FFmpegMusic.cpp  OpenSLEngine.cpp  native-lib.cpp
app/src/main/cpp/include/: FFmpegMusic.h  OpenSLEngine.h
app/src/main/java/com/example/ffmpegrelated/: MainActivity.kt  MusicPlay.kt  MusicPlayService.kt  SurfaceViewManager.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/ffmpegrelated/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
